--- a/app/views/admin/users.html.haml
+++ b/app/views/admin/users.html.haml
@@ -1,6 +1,6 @@
 .hello_form
   .sub_header
-    Dashboard
+    Users
 %ul.nav.nav-pills.nav-justified#tabs_nav_bar
   %li.active
     %a{"data-toggle" => "tab", href: "#superadmins"} Superadmins
