--- a/app/views/admin/_users_tab.html.haml
+++ b/app/views/admin/_users_tab.html.haml
@@ -17,5 +17,5 @@
           %td= link_to full_name(u), user_path(u)
           %td= u.products.count
           %td= u.events.count
-          %td= link_to 'Ban', ban_user_path(u)
+          %td= ban_button(u)
           %td= link_to 'x', u, method: :delete
