--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -394,6 +394,10 @@ html, body {
 .margin_remember {
   margin-left: 20px;
 }
+.nested-fields {
+  margin-left: 105px;
+  margin-top: 10px;
+}
 #user_remember_me {
   margin-top: 2px;
 }
